# Leader-alpha

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
data/: data_path.h
data/json_file/config/: default_save_config.json  game_config.json
data/json_file/config/base/: resolution_config_base.json
data/json_file/config/base/difficulty/: first_election_difficulty_base.json
data/json_file/entity/: entity_path.h
data/json_file/entity/character/: character_name_base.json  character_trait.json
data/json_file/entity/city/: city.json  city_population_identity_template.json
data/json_file/entity/country/: country.json
data/json_file/entity/ideology/: ideology.json  ideology_axis.json
data/json_file/entity/party/: party.json  party_population_identity_template.json
data/json_file/languages/EN/: test_localizator1.json  test_localizator2.json  user_menu.json
data/json_file/languages/TR/: test_localizator1.json  user_menu.json
data/json_file/preference/base/: general_preference_base.json
source/campaign/entity/: Country.cpp  Country.h  World.cpp  World.h
source/campaign/entity/base/: Entity.h
source/campaign/entity/character/: Character.cpp  Character.h  CharacterCreator.cpp  CharacterCreator.h
source/campaign/entity/city/: City.cpp  City.h
source/campaign/entity/ideology/: Ideology.cpp  Ideology.h  IdeologyCoordinate.cpp  IdeologyCoordinate.h  IdeologyMathTools.cpp  IdeologyMathTools.h
source/campaign/entity/party/: Party.cpp  Party.h
source/campaign/entity/population_identity/: PopulationIdentity.cpp  PopulationIdentity.h  PopulationIdentityEnums.h  PopulationIdentityTemplate.cpp  PopulationIdentityTemplate.h
source/preference/: constants.h
source/tools/: JsonTools.cpp  JsonTools.h  Randomizer.cpp  Randomizer.h
